test_programs/compile_failure/regression_10216/src/main.nr
fn main(mut x: u32) {
    let xs = #[&mut x];
    println(xs);
}
